# Afgangsprojekt-2023

./: .gitignore  README.md  math_stuff.py  publish_cmd_vel.py  startup.txt
facilitycobot_demo-master/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
facilitycobot_demo-master/config/: visual_exploration_motion.npz
facilitycobot_demo-master/include/: robotiq_gripper.py
facilitycobot_demo-master/launch/: test_mir_navigation.launch  test_ur.launch
facilitycobot_demo-master/notes/: ER_vision_calibration.md  mir.md
facilitycobot_demo-master/src/: grasp.py
local_planners/: CMakeLists.txt  dynamic_window_approach.py  human_cost.py  package.xml  safe_artificial_potential_fields.py
map_server/: i4map.yaml  usage.txt
modules/: human_cost.py  math_stuff.py
obstacle_detector/: CMakeLists.txt  package.xml
obstacle_detector/launch/: obstacle_detector.launch
obstacle_detector/src/: get_obstacles.py
people_detection/: detector.py  determine_normal_vectors.py  picture_people_detection.py  test_distance_estimator.py  video_people_detection.py
person_manager/: CMakeLists.txt  package.xml
person_manager/msg/: Landmark.msg
person_manager/scripts/: draw_proxemics.py  person_detector.py
person_manager/scripts/src/people_detection/: detector.py  determine_normal_vectors.py  picture_people_detection.py  test_distance_estimator.py  video_people_detection.py
robot_control/: package.xml  robot_control.py  robot_cotroller.py  timestamp.py
robot_control/src/: comparison.py  dynamic_window_approach.py  dynamic_window_approach_copy.py  graphs.py  mir.py  (+7 more)
(+14 files in other folders)
