<?xml version="1.0"?>
<package format="2">
  <name>person_manager</name>
  <version>0.0.0</version>
  <description>The person_manager package</description>

  <maintainer email="anders@todo.todo">anders</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
